<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_Parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="ltr"
    android:background="#CC000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/widget_NowPlayingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="4dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/widget_PlayingThumbnail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="3dp"
                android:contentDescription="@string/podcast_image"
                android:layout_gravity="start"/>

            <ImageButton
                android:id="@+id/widget_rew"
                android:contentDescription="@string/rewind"
                style="@style/ExoMediaButton.Rewind"/>

            <ImageButton
                android:id="@+id/widget_play"
                android:contentDescription="@string/play"
                style="@style/ExoMediaButton.Play"/>

            <ImageButton
                android:id="@+id/widget_pause"
                android:contentDescription="@string/pause"
                style="@style/ExoMediaButton.Pause"/>

            <ImageButton
                android:id="@+id/widget_ffwd"
                android:contentDescription="@string/fast_forward"
                style="@style/ExoMediaButton.FastForward"/>



        </LinearLayout>


    </LinearLayout>

</LinearLayout>