<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playbackControls"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:layoutDirection="ltr"
    android:background="#CC000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nowPlayingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"/>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="4dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/playingThumbnail"
            android:contentDescription="@string/podcast_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingTop="3dp"/>

        <ImageButton android:id="@id/exo_play"
            android:contentDescription="@string/play"
            style="@style/ExoMediaButton.Play"/>

        <ImageButton android:id="@id/exo_pause"
            style="@style/ExoMediaButton.Pause"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView android:id="@id/exo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:includeFontPadding="false"
                android:textColor="#FFBEBEBE"/>

            <com.google.android.exoplayer2.ui.DefaultTimeBar android:id="@id/exo_progress"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="32dp"/>

            <TextView android:id="@id/exo_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:includeFontPadding="false"
                android:textColor="#FFBEBEBE"/>

        </LinearLayout>


    </LinearLayout>


    </LinearLayout>

</LinearLayout>