<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PodcastSelectedFragment"
    android:fitsSystemWindows="true">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="4dp"
            android:background="@color/cardview_light_background">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="20dp"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/selected_image"
                        android:contentDescription="@string/podcast_image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:layout_collapseMode="parallax"
                        android:scaleType="fitCenter"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/cardview_shadow_start_color" />

                </FrameLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="pin" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_below="@id/app_bar_layout">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/selcted_podcastCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:elevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/description"
                                android:textSize="28sp"
                                android:textStyle="bold"/>

                            <Button
                                android:id="@+id/favourite"
                                android:clickable="false"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_weight="1"
                                android:drawableStart="@drawable/fav_toggle"
                                android:text="@string/favourite"
                                android:background="#FFFFFF"/>

                        </LinearLayout>

                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:id="@+id/selected_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scrollbars="vertical"
                            android:textSize="18sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/episodes"
                    android:textStyle="bold"
                    android:textSize="28sp"/>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />


            </LinearLayout>


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/episodesGrid"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    </android.support.v7.widget.RecyclerView>

        </LinearLayout>
        </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="48dp"/>

    <FrameLayout
        android:id="@+id/nowPlaying"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom">

    </FrameLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="end"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="10dp"
        app:fabSize="mini"

        android:src="@android:drawable/btn_star_big_off"
        android:focusable="true" />


</android.support.design.widget.CoordinatorLayout>